@@ -1,3 +1,9 @@
+2009-02-02  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/commands/bot.py:
+	* jhbuild/config.py: reload (parts of) jhbuild configuration file when
+	buildbot server is sent SIGHUP (everything but environment variables).
+
 2009-02-01  Vincent Untz  <vuntz@gnome.org>
 
 	* modulesets/gnome-suites-2.26.modules: move brasero and
